--- a/test/asymptotes/index.html
+++ b/test/asymptotes/index.html
@@ -3,10 +3,10 @@
     <title>Braxton's Senior Project - Tests - Asymptotes</title>
   </head>
   <body>
-    <h1><a href="/test/asymptotes/test1.html">Test 1 - z = x + y</a></h1>
-    <h1><a href="/test/asymptotes/test2.html">Test 1 - z = x * y</a></h1>
-    <h1><a href="/test/asymptotes/test3.html">Test 1 - z = Math.sqrt(25 - x * x - y * y)</a></h1>
-    <h1><a href="/test/asymptotes/test4.html">Test 1 - z = Math.sin(x) + Math.cos(y)</a></h1>
-    <h1><a href="/test/asymptotes/test5.html">Test 1 - z = Math.log(x * y)</a></h1>
+    <h1><a href="/test/asymptotes/test1.html">Test 1 - z = (x + y) / (x - y)</a></h1>
+    <h1><a href="/test/asymptotes/test2.html">Test 2 - z = Math.tan(x / 3) + Math.tan(y / 3)</a></h1>
+    <h1><a href="/test/asymptotes/test3.html">Test 3 - z = (x * x + 3 * y * x + y * y) / (x + 1)</a></h1>
+    <h1><a href="/test/asymptotes/test4.html">Test 4 - z = x / Math.tan(y / 3)</a></h1>
+    <h1><a href="/test/asymptotes/test5.html">Test 5 - z = Math.sin(x/3) / Math.cos(y/3)</a></h1>
   </body>
 </html>
