--- a/test/implicit/test3.html
+++ b/test/implicit/test3.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Braxton's Senior Project - Design Documents</title>
-    <link rel="stylesheet" type="text/css" href="../css/all.css">
+    <link rel="stylesheet" type="text/css" href="/css/all.css">
     <script type="text/javascript" src="/js/navagation.js"></script>
     <script type="text/javascript" src="/js/transformation_matrix.js"></script>
     <script type="text/javascript" src="/js/perspective_matrix.js"></script>
@@ -277,44 +277,6 @@
           Z:
         </label>
         <input type="text" id="directional_lighting_z" value="0" onblur="update_directional_lighing();" />
-        <br>
-      </div>
-      <h3 onclick="toggle_display('bound_settings');">Bounds</h3>
-      <div id="bound_settings">
-        <label for="x_min">
-          X Min:
-        </label>
-        <input type="text" id="x_min" value="-10" onblur="update_bounds();" />
-        <label for="x_max">
-          Max:
-        </label>
-        <input type="text" id="x_max" value="10" onblur="update_bounds();" />
-        <label for="x_step">
-          Step:
-        </label>
-        <input type="text" id="x_step" value="0.1" onblur="update_bounds();" />
-        <br>
-        <label for="y_min">
-          Y Min:
-        </label>
-        <input type="text" id="y_min" value="-10" onblur="update_bounds();" />
-        <label for="y_max">
-          Max:
-        </label>
-        <input type="text" id="y_max" value="10" onblur="update_bounds();" />
-        <label for="y_step">
-          Step:
-        </label>
-        <input type="text" id="y_step" value="0.1" onblur="update_bounds();" />
-        <br>
-        <label for="z_min">
-          Z Min:
-        </label>
-        <input type="text" id="z_min" value="-10" onblur="update_bounds();" />
-        <label for="z_max">
-          Max:
-        </label>
-        <input type="text" id="z_max" value="10" onblur="update_bounds();" />
         <br>
       </div>
     </div>
