--- a/design/transformation_matrix.html
+++ b/design/transformation_matrix.html
@@ -33,6 +33,9 @@
         <li>
           To GL Matrix - WebGL wants the values in a 1 dimensional array, read down the column.
         </li>
+        <li>
+          Create Normal Matrix - This will make a matrix perpendicular to the transformation matrix. It's important for transforming the directional lighting.
+        </li>
       </ul>
     </p>
   </body>
