--- a/test/implicit/test5.html
+++ b/test/implicit/test5.html
@@ -17,6 +17,7 @@
       <canvas id="canvas" width="500" height="500">
       </canvas>
     </div>
+    <a style="display: none;" id="google_link">See it on Google</a>
     <div class="settings">
       <h3 onclick="toggle_display('rotation_settings')">Rotation Settings</h3>
       <div id="rotation_settings" class="rotation">
@@ -102,15 +103,15 @@
         <label for="ambient_lighting_red">
           Color - R:
         </label>
-        <input type="text" id="ambient_lighting_red" value="0.3" onblur="update_ambient_lighting();" />
+        <input type="text" id="ambient_lighting_red" value="0.2" onblur="update_ambient_lighting();" />
         <label for="ambient_lighting_green">
           G:
         </label>
-        <input type="text" id="ambient_lighting_green" value="0.3" onblur="update_ambient_lighting();" />
+        <input type="text" id="ambient_lighting_green" value="0.2" onblur="update_ambient_lighting();" />
         <label for="ambient_lighting_blue">
           B:
         </label>
-        <input type="text" id="ambient_lighting_blue" value="0.3" onblur="update_ambient_lighting();" />
+        <input type="text" id="ambient_lighting_blue" value="0.2" onblur="update_ambient_lighting();" />
         <br>
       </div>
       <h3 onclick="toggle_display('directional_lighting_settings');">Directional Lighting Settings</h3>
@@ -131,15 +132,15 @@
         <label for="directional_lighting_x">
           Direction - X:
         </label>
-        <input type="text" id="directional_lighting_x" value="0" onblur="update_directional_lighing();" />
+        <input type="text" id="directional_lighting_x" value="0.1" onblur="update_directional_lighing();" />
         <label for="directional_lighting_y">
           Y:
         </label>
-        <input type="text" id="directional_lighting_y" value="0" onblur="update_directional_lighing();" />
+        <input type="text" id="directional_lighting_y" value="0.1" onblur="update_directional_lighing();" />
         <label for="directional_lighting_z">
           Z:
         </label>
-        <input type="text" id="directional_lighting_z" value="1" onblur="update_directional_lighing();" />
+        <input type="text" id="directional_lighting_z" value="1.0" onblur="update_directional_lighing();" />
         <br>
       </div>
     </div>
